[gd_scene load_steps=7 format=3 uid="uid://ck61wdkgme8nd"]

[ext_resource type="Texture2D" uid="uid://vjnf83spe4ne" path="res://assets/mail game/mail set.png" id="1_0yfnd"]
[ext_resource type="Script" path="res://scripts/main_ui.gd" id="1_ccpb7"]
[ext_resource type="Texture2D" uid="uid://balolv2m5fscj" path="res://assets/graphics/tilemap/base_tilemap.png" id="2_dbfdo"]
[ext_resource type="LabelSettings" uid="uid://bq3obqsgm7fho" path="res://ui/ui_label_settings.tres" id="3_igkmi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2shh7"]
atlas = ExtResource("2_dbfdo")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojfer"]
atlas = ExtResource("2_dbfdo")
region = Rect2(96, 16, 16, 16)

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccpb7")

[node name="TimeControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 199.0
offset_top = 4.0
offset_right = 236.0
offset_bottom = 31.0

[node name="Panel" type="NinePatchRect" parent="TimeControl"]
layout_mode = 0
offset_right = 37.0
offset_bottom = 27.0
texture = ExtResource("1_0yfnd")
region_rect = Rect2(80, 16, 16, 16)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="TimeTexture" type="TextureRect" parent="TimeControl"]
layout_mode = 0
offset_top = 11.0
offset_right = 16.0
offset_bottom = 27.0
texture = SubResource("AtlasTexture_2shh7")

[node name="DayTexture" type="TextureRect" parent="TimeControl"]
layout_mode = 0
offset_top = -1.0
offset_right = 16.0
offset_bottom = 15.0
texture = SubResource("AtlasTexture_ojfer")

[node name="Divider" type="NinePatchRect" parent="TimeControl"]
layout_mode = 0
offset_left = 4.0
offset_top = 13.0
offset_right = 33.0
offset_bottom = 14.0
texture = ExtResource("1_0yfnd")
region_rect = Rect2(80, 14, 16, 1)

[node name="DayLabel" type="Label" parent="TimeControl"]
layout_mode = 0
offset_left = 14.0
offset_top = 4.0
offset_right = 34.0
offset_bottom = 10.0
text = "30"
label_settings = ExtResource("3_igkmi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoursLabel" type="Label" parent="TimeControl"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 23.0
offset_bottom = 22.0
text = "23"
label_settings = ExtResource("3_igkmi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinutesLabel" type="Label" parent="TimeControl"]
layout_mode = 0
offset_left = 26.0
offset_top = 16.0
offset_right = 34.0
offset_bottom = 22.0
text = "59"
label_settings = ExtResource("3_igkmi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLabel" type="Label" parent="TimeControl"]
layout_mode = 0
offset_left = 22.0
offset_top = 16.0
offset_right = 26.0
offset_bottom = 22.0
text = ":"
label_settings = ExtResource("3_igkmi")

[node name="HintControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Z" type="NinePatchRect" parent="HintControl"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 122.0
offset_right = 19.0
offset_bottom = 139.0
texture = ExtResource("1_0yfnd")
region_rect = Rect2(80, 16, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="zLabel" type="Label" parent="HintControl/Z"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 8.0
offset_bottom = 9.0
scale = Vector2(1.5, 1.5)
text = "z"
label_settings = ExtResource("3_igkmi")

[node name="X" type="NinePatchRect" parent="HintControl"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 122.0
offset_right = 19.0
offset_bottom = 139.0
texture = ExtResource("1_0yfnd")
region_rect = Rect2(80, 16, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="xLabel" type="Label" parent="HintControl/X"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 8.0
offset_bottom = 9.0
scale = Vector2(1.5, 1.5)
text = "x"
label_settings = ExtResource("3_igkmi")

[node name="CoinControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 199.0
offset_top = 33.0
offset_right = 236.0
offset_bottom = 44.0

[node name="Panel" type="NinePatchRect" parent="CoinControl"]
layout_mode = 0
offset_right = 37.0
offset_bottom = 11.0
texture = ExtResource("1_0yfnd")
region_rect = Rect2(80, 16, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
metadata/_edit_lock_ = true

[node name="Sign" type="Label" parent="CoinControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.1
anchor_bottom = 0.15
offset_left = 3.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = 2.0
text = "$"
label_settings = ExtResource("3_igkmi")
metadata/_edit_lock_ = true

[node name="CoinLabel" type="Label" parent="CoinControl"]
layout_mode = 0
offset_left = 7.0
offset_top = 2.0
offset_right = 35.0
offset_bottom = 8.0
text = "9999999"
label_settings = ExtResource("3_igkmi")
horizontal_alignment = 2
metadata/_edit_lock_ = true
